--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,9 @@
 #   gem 'sqlite3'
 development:
   adapter: postgresql
-  database: tripleworld_dev
+  database: zz_development
+  username: zenzai
+  password:
   pool: 5
   timeout: 5000
 
@@ -14,12 +16,16 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: postgresql
-  database: tripleworld_test
+  database: zz_test
+  username: zenzai
+  password:
   pool: 5
   timeout: 5000
 
 production:
   adapter: postgresql
-  database: tripleworld_production
+  database: zz_production
+  username: zenzai
+  password:
   pool: 5
   timeout: 5000
