Adds more precompiled assets

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -5,5 +5,47 @@ application.js: application-e8d96deb04e43341f60bed81e0100861.js
 application/index.js: application-e8d96deb04e43341f60bed81e0100861.js
 application.css: application-958338c4c22a6b55b8361a6301119518.css
 application/index.css: application-958338c4c22a6b55b8361a6301119518.css
+coffee-script.js: coffee-script-b923b237bb60da2727b8cfe5573fabf6.js
+coffee-script/index.js: coffee-script-b923b237bb60da2727b8cfe5573fabf6.js
+jquery.js: jquery-4c9447fc802ac49793b844ae67cf5b26.js
+jquery/index.js: jquery-4c9447fc802ac49793b844ae67cf5b26.js
+jquery.min.js: jquery.min-1648068e6704b358a9fbcfcea86d3294.js
+jquery/index.min.js: jquery.min-1648068e6704b358a9fbcfcea86d3294.js
 jquery.min.map: jquery.min-6336c5bca4c709e809647cdfcb484d0a.map
 jquery/index.min.map: jquery.min-6336c5bca4c709e809647cdfcb484d0a.map
+jquery_ujs.js: jquery_ujs-8f49c4c34038e5b37d1bdb7593de6ba2.js
+jquery_ujs/index.js: jquery_ujs-8f49c4c34038e5b37d1bdb7593de6ba2.js
+foundation.js: foundation-49024d0a0efd8c7b6a9ef74c5b56fcfb.js
+foundation/index.js: foundation-49024d0a0efd8c7b6a9ef74c5b56fcfb.js
+foundation/foundation.abide.js: foundation/foundation.abide-a141426eaff2861db611022b3ead9f30.js
+foundation/foundation/index.abide.js: foundation/foundation.abide-a141426eaff2861db611022b3ead9f30.js
+foundation/foundation.accordion.js: foundation/foundation.accordion-ed92b9fc96742c8fdbcf5bfe64e64acf.js
+foundation/foundation/index.accordion.js: foundation/foundation.accordion-ed92b9fc96742c8fdbcf5bfe64e64acf.js
+foundation/foundation.alert.js: foundation/foundation.alert-94c21bf4b439a75944cdd538b18db736.js
+foundation/foundation/index.alert.js: foundation/foundation.alert-94c21bf4b439a75944cdd538b18db736.js
+foundation/foundation.clearing.js: foundation/foundation.clearing-2cd990a5ad33b828288ba6e3d9bd6cb8.js
+foundation/foundation/index.clearing.js: foundation/foundation.clearing-2cd990a5ad33b828288ba6e3d9bd6cb8.js
+foundation/foundation.dropdown.js: foundation/foundation.dropdown-84ffb17290da278a8f5844f77c472bd7.js
+foundation/foundation/index.dropdown.js: foundation/foundation.dropdown-84ffb17290da278a8f5844f77c472bd7.js
+foundation/foundation.interchange.js: foundation/foundation.interchange-d968bf2e0b3b03183498499bed6f024a.js
+foundation/foundation/index.interchange.js: foundation/foundation.interchange-d968bf2e0b3b03183498499bed6f024a.js
+foundation/foundation.joyride.js: foundation/foundation.joyride-932c4f882c4918d31448d43443f9f93a.js
+foundation/foundation/index.joyride.js: foundation/foundation.joyride-932c4f882c4918d31448d43443f9f93a.js
+foundation/foundation.js: foundation/foundation-dfde9a5bdec817496c53d21a6f887665.js
+foundation/foundation/index.js: foundation/foundation-dfde9a5bdec817496c53d21a6f887665.js
+foundation/foundation.magellan.js: foundation/foundation.magellan-8da5e7393a3b87b72a77082ab5854be3.js
+foundation/foundation/index.magellan.js: foundation/foundation.magellan-8da5e7393a3b87b72a77082ab5854be3.js
+foundation/foundation.offcanvas.js: foundation/foundation.offcanvas-2304b7786e4a508a35dcc014b8e3a959.js
+foundation/foundation/index.offcanvas.js: foundation/foundation.offcanvas-2304b7786e4a508a35dcc014b8e3a959.js
+foundation/foundation.orbit.js: foundation/foundation.orbit-cbc6d097a95399d3d7419a2130f1008b.js
+foundation/foundation/index.orbit.js: foundation/foundation.orbit-cbc6d097a95399d3d7419a2130f1008b.js
+foundation/foundation.reveal.js: foundation/foundation.reveal-4d3cff6e323db0e8cdd193e9c496e40a.js
+foundation/foundation/index.reveal.js: foundation/foundation.reveal-4d3cff6e323db0e8cdd193e9c496e40a.js
+foundation/foundation.tab.js: foundation/foundation.tab-5560471c8cc5ed203e1ff29e4663db04.js
+foundation/foundation/index.tab.js: foundation/foundation.tab-5560471c8cc5ed203e1ff29e4663db04.js
+foundation/foundation.tooltip.js: foundation/foundation.tooltip-b7dfe63ded493916955da0c9571e84df.js
+foundation/foundation/index.tooltip.js: foundation/foundation.tooltip-b7dfe63ded493916955da0c9571e84df.js
+foundation/foundation.topbar.js: foundation/foundation.topbar-d952f5ef83a77b82412fe7357701b573.js
+foundation/foundation/index.topbar.js: foundation/foundation.topbar-d952f5ef83a77b82412fe7357701b573.js
+vendor/modernizr.js: vendor/modernizr-a7d5258f68c42509cd151b5d3ebb9aa9.js
+vendor/modernizr/index.js: vendor/modernizr-a7d5258f68c42509cd151b5d3ebb9aa9.js
