Moves to Ruby 2.1.0

--- a/config/database.yml
+++ b/config/database.yml
@@ -4,6 +4,7 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
+  host: localhost
   adapter: postgresql
   database: zz_development
   username: zenzai
@@ -16,6 +17,7 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
+  host: localhost
   adapter: postgresql
   database: zz_test
   encoding: utf8
