--- a/config/database.yml
+++ b/config/database.yml
@@ -15,7 +15,7 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
+test: &test
   host: localhost
   adapter: postgresql
   database: zz_test
@@ -31,3 +31,6 @@ production:
   password:
   pool: 5
   timeout: 5000
+
+cucumber:
+  <<: *test
